fix(be): improve global exception handling and validation messages